# blctl

./: Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
blctl/: Cargo.toml
blctl/src/: cli.rs  error.rs  main.rs  utils.rs
blctl/src/cli/: brightness_value.rs
blctl/src/commands/: completions.rs  get.rs  list.rs  max.rs  mod.rs  restore.rs  set.rs
blctl/src/utils/: brightness_value.rs  state_store.rs
bllib/: Cargo.toml
bllib/src/: discovery.rs  driver.rs  lib.rs  transition.rs
bllib/src/drivers/: acpi.rs  sysfs.rs
bllib/src/transitions/: exponential.rs  linear.rs  mod.rs
