[package]
name = "blctl"
version.workspace = true
edition.workspace = true
description = "Command-line tool for controlling Linux backlight devices"

[dependencies]
bllib.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
